# DSA4213-MedicalRAG

./: .gitignore  CancerGov_QA_Dataset.csv  README.md  config.py  evaluation.py  generate.py  prep_chunks.py  prompts.py  pyproject.toml  rag_evaluation_results_metrics.csv  requirements.txt  retrieval.py
1_CancerGov_QA/: 0000006_2.xml  0000007_3.xml  0000024_1.xml  0000024_2.xml  0000024_3.xml  0000024_4.xml  0000024_5.xml  0000024_6.xml  0000024_7.xml  0000024_8.xml  README.md
Adrian/: collection.py
Adrian/data/: PMC10099796.xml  PMC10238628.plain.txt  PMC10238628.xml  PMC10259050.plain.txt  PMC10488320.pretty.xml  PMC11078954.pretty.xml  PMC11078954.xml  PMC11184125.plain.txt  PMC11184125.xml  PMC11201516.plain.txt  PMC11513776.xml  PMC11635530.plain.txt  PMC11852771.plain.txt  PMC11924961.plain.txt  PMC11924961.pretty.xml  PMC11924961.xml  PMC12367065.plain.txt  PMC12367065.xml  PMC6403009.plain.txt  PMC6494975.pretty.xml  PMC6563559.plain.txt  PMC6835610.plain.txt  PMC7030948.plain.txt  PMC7030948.xml  PMC7430217.xml  PMC7444638.xml  PMC7497309.pretty.xml  PMC7700753.xml  PMC8638760.pretty.xml  PMC8748501.pretty.xml  PMC8759532.plain.txt  PMC8759532.xml  PMC8975834.xml  (+5 more)
data/: pmcids_cancer.txt
src/: 16K_chatbot.py  GPT4_chatbot.py  bm25_vectorstore.py  build_bm25_store.py  build_faiss_store.py  build_vectorstore.py  chatbot_cli.py  config.py  convert_QA_files.py  download_cancergov_docs.py  draw_figures.py  evaluate_bm25_retrieval.py  evaluate_faiss_retrieval.py  evaluate_rag.py  evaluate_retrieval.py  generate_evaluation_data.py  ingest_data.py  prompt_templates.py  query_data.py  rag_GPT4.py  rag_pipeline.py  rag_with_16k.py
store/: README.md
store_v2/: README.md
(+352 files in other folders)
