[project]
name = "dsa4213-medicalrag"
version = "0.1.0"
description = "DSA4213 Medical RAG Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
