[project]
name = "dsa4213-medicalrag"
version = "0.1.0"
description = "DSA4213 Medical RAG Project"
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=1.0.1,<2.0.0",
    "langchain-openai>=1.0.0",
    "nltk>=3.9.2",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "langchain-community (>=0.4,<0.5)",
    "pandas (>=2.3.3,<3.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "beautifulsoup4>=4.14.2",
]

[tool.poetry]
package-mode = false
